@@ -36,7 +36,7 @@ Package: python-apport
 XB-Python-Version: ${python:Versions}
 Section: python
 Architecture: all
-Depends: ${python:Depends}, python-problem-report, python-launchpad-bugs (>= 0.1.2), gdb
+Depends: ${python:Depends}, python-problem-report (>= 0.70), python-launchpad-bugs (>= 0.1.2), gdb
 Conflicts: python-apport-utils
 Replaces: python-apport-utils
 Description: apport crash report handling library
