@@ -31,6 +31,10 @@ apport (0.70) UNRELEASED; urgency=low
     keys which have been added since load() or construction. Add test cases.
   * problem_report.py: Add optional parameter only_new to write(), which
     writes only the get_new() keys. Add test case.
+  * apport/ui.py: Remember currently processed report file and update it with
+    the added information, so that it becomes useful for local evaluation,
+    too. Bump python-problem-report dependency to ensure write()'s only_new
+    availability. (LP: #94678)
 
   [ Kees Cook ]
   * apport/report.py, add_proc_info(): If reading /proc/pid/maps fails,
@@ -57,7 +61,7 @@ apport (0.70) UNRELEASED; urgency=low
   * apport/ui.py, open_url(): Check that $DISPLAY is set before considering
     the KDE/Gnome web browsers.
 
- -- Martin Pitt <martin.pitt@ubuntu.com>  Thu, 22 Mar 2007 21:13:16 +0100
+ -- Martin Pitt <martin.pitt@ubuntu.com>  Thu, 22 Mar 2007 21:17:00 +0100
 
 apport (0.69) feisty; urgency=low
 
